--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,4 +72,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ascadis/ajc-ci:angular
+          tags: smarieantoine/demo-ci:angular
